fix(task): 修复 CodeGraph 索引进度不更新问题（内存优先 + 回调条件修正）
- IndexProgressTracker.get() 改为优先返回内存进度，DB 查询仅作重启恢复后备；
  原实现优先查 DB 导致同步线程读旧值→写旧值→进度永远不更新的死循环
- CliIndexCallbacks.accept() 移除 percent >= 0 前置条件，与 sync 方法一致，
  确保无百分比的输出行也能更新进度消息（保留上次百分比）
- 同步更新 IndexProgressTrackerTests 测试用例以反映内存优先策略